make temp dir Thread Safe